fix: Avoid overflowing the button

--- a/src/pages/DevuHomePage/components/Hero/Hero.css
+++ b/src/pages/DevuHomePage/components/Hero/Hero.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 768px) {
   .DevuHomePage__hero-center {
     display: block;
-    height: auto;
+    height: 100ch;
   }
 }
 
@@ -25,7 +25,6 @@
     flex-direction: column;
     align-content: center;
     align-items: center;
-    height: 100%;
   }
 }
 
